--- a/css_pages/card.css
+++ b/css_pages/card.css
@@ -2,7 +2,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: Arial, sans-serif;
+  font-family:  sans-serif;
 }
 
 body {
@@ -150,7 +150,6 @@ th {
 td {
   padding: 15px;
   border-bottom: 1px solid #eee;
-  vertical-align: middle;
 }
 
 td img {
@@ -186,7 +185,7 @@ td img {
  
 
 .proceed-btn {
-  display: inline-block;
+  /* display: inline-block; */
   background: #f59e0b;
   color: #000;
   text-decoration: none;
