--- a/css_pages/dogs.css
+++ b/css_pages/dogs.css
@@ -14,7 +14,7 @@ main {
 }
 
 .actions {
-  display: grid;
+  /* display: flex; */
  
   align-items: center;
   margin-top: 10px;
@@ -147,7 +147,7 @@ body {
 
 .price-filter label {
   display: block;
-  margin: 6px 0;
+  
 }
 
 .apply-btn {
@@ -196,9 +196,9 @@ body {
 
 
 .products-header {
-  display: flex;
+  /* display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-between; */
   margin-bottom: 20px;
   
 }
@@ -211,7 +211,7 @@ body {
 .products-header h2 a {
   color: #000;
   text-decoration: none;
-  transition: color 0.3s ease;
+  transition: color 0.3s ;
 }
 
 .products-header h2 a:hover {
@@ -223,7 +223,7 @@ body {
 .card {
   background: white;
   border-radius: 6px;
-  box-shadow: 0 1px 3px rgba(0,0,0,0.2);
+  box-shadow: 0 2px 10px rgba(0,0,0,0.2);
   overflow: hidden;
   transition: 0.2s;
 }
@@ -259,13 +259,7 @@ body {
   margin-top: 10px;
 } 
 
-.cart-btn {
-  background: white;
-  border: 1px solid #ccc;
-  padding: 5px 10px;
-  box-shadow: 0 1px 2px rgba(0,0,0,0.1);
-  cursor: pointer;
-}
+
 
 
 .heart {
