--- a/css_pages/placeorder.css
+++ b/css_pages/placeorder.css
@@ -3,7 +3,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: Arial, sans-serif;
+  font-family:  sans-serif;
 }
 
 body {
@@ -135,7 +135,7 @@ body {
   text-decoration: none;
   color: #333;
   font-weight: 600;
-  border-bottom: 2px solid transparent;
+  
   transition: 0.3s;
 }
 
@@ -147,9 +147,9 @@ body {
 
 .order-section {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: repeat(2,1fr);
   gap: 40px;
-  margin: 20px 70px 100px;
+  margin: 20px 100px;
  
 }
 
@@ -174,7 +174,7 @@ body {
 
 .box:hover {
   transform: translateY(-3px);
-  box-shadow: 0 6px 20px rgba(0, 0, 0, 0.12);
+ 
 }
 
 .box h3 {
@@ -219,7 +219,7 @@ body {
   font-weight: 600;
   color: #222;
   display: flex;
-  justify-content: space-between;
+ 
   align-items: center;
 }
 
