--- a/css_pages/product_det.css
+++ b/css_pages/product_det.css
@@ -23,7 +23,7 @@ body {
   top: 0;
   left: 0;
   width: 100%;
-  z-index: 1000;
+  
 }
 
 .logo {
@@ -66,7 +66,7 @@ body {
   border: none;
   background: transparent;
   font-size: 18px;
-  cursor: pointer;a
+  cursor: pointer;
   color: #555;
   transition: 0.3s;
 }
@@ -90,10 +90,9 @@ body {
 
 .container {
   background: #fff;
-  display: grid;
-  grid-template-columns: 1fr 1.5fr;
+  /
   align-items: center;
-  gap: 2rem;
+  gap: 20px   ;
   padding: 2rem;
   max-width: 900px;
   width: 90%;
@@ -103,26 +102,26 @@ body {
 }
 
 .product-image img {
-  width: 100%;
+ 
   max-width: 250px;
   display: block;
   margin: auto;
 }
 
 .product-details h2 {
-  font-size: 1.8rem;
-  margin-bottom: 1rem;
+  font-size: 20px;
+  margin-bottom: 20px;
 }
 
 .product-details p {
-  font-size: 1rem;
-  margin: 0.5rem 0;
+  font-size: 15px;
+  margin: 10px 0;
 }
 
 .buttons {
-  margin-top: 1.5rem;
+  margin-top: 10px;
   display: flex;
-  gap: 1rem;
+  gap: 20px;
 }
 
 button {
