--- a/css_pages/login_css.css
+++ b/css_pages/login_css.css
@@ -122,10 +122,10 @@ button:hover {
   text-decoration: none;
   margin: 0 8px;
 }
-
+/* 
 .footer-links a:hover {
   text-decoration: underline;
-}
+} */
 
 
 .login-right {
