--- a/css_pages/trackorder.css
+++ b/css_pages/trackorder.css
@@ -2,7 +2,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: Arial, sans-serif;
+  font-family:  sans-serif;
 }
 
 body {
@@ -183,7 +183,7 @@ body {
 
 
 
-/* Footer */
+
     .footer {
       background-color: #E88D28;;
       padding: 15px;
