--- a/css_pages/dogs.css
+++ b/css_pages/dogs.css
@@ -156,7 +156,7 @@ body {
   border: 1px solid #ebd7d7;
   background: white;
   cursor: pointer;
-  box-shadow: 0 1px 2px rgba(0,0,0,0.2);
+  box-shadow: 0 3px 2px 2px rgba(0,0,0,0.2);
 }
 
 
@@ -196,9 +196,7 @@ body {
 
 
 .products-header {
-  /* display: flex;
-  align-items: center;
-  justify-content: space-between; */
+  
   margin-bottom: 20px;
   
 }
@@ -249,7 +247,7 @@ body {
 
 .info .desc {
   color: #555;
-  font-size: 0.9rem;
+  font-size: 20px;
 }
 
  .actions {
