--- a/css_pages/wishlist.css
+++ b/css_pages/wishlist.css
@@ -123,6 +123,10 @@ body {
   transition: 0.3s;
 }
 
+.shop-table td, .shop-table th {
+  vertical-align: middle;
+   text-align: center;  
+}
 
 
 .shop-table {
@@ -155,6 +159,7 @@ body {
   color: #f6b400;
   font-weight: bold;
   text-decoration: none;
+  
  
 
 }
@@ -181,7 +186,7 @@ body {
   padding: 12px 25px;
   border-radius: 30px;
   text-decoration: none;
-  box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+  box-shadow: 0 5px 5px 5px rgba(0,0,0,0.2);
   transition: 0.3s ;
 }
 .back-btn:hover {
